# forecast_vol

./: CITATION.cff  Dockerfile  LICENSE (MIT)  Makefile  README.md  main.py  pyproject.toml  pytest.ini  setup.cfg
configs/: attention.yaml  data.yaml  deep_learning.yaml  features.yaml  general.yaml  gnn.yaml  hmm.yaml  market_sessions.yaml  models.yaml  multi_asset.yaml  preprocess.yaml  stoch.yaml  stochastic.yaml  tuning.yaml
data/: README
data_analysis/: data_quality_checks.py  market_session_integrity.py
deep_learning_models/: attention_model.py  build_model.py  hyperparam_search.py  lstm_model.py  split.py
incremental_pipelines/: synergy_stoch_preprocessing.py
multi_asset_synergy/: hmm_regime.py  hyperparam_search.py  inject_synergy.py
pipelines/: build_final_model.py  process_data.py
preprocessing/data_ingestion/: merge.py  restrict.py
preprocessing/feature_engineering/: basic_features.py
reports/attention/: best_params.yaml  feature_list.csv  optuna_trials.csv
reports/market_sessions/: session_calendar_report.json
reports/preprocess/: dataset_shape.txt  resample_gap_report.csv  restrict_gap_report.csv
reports/stochastic/: fit_report.csv
reports/synergy/: best_params.yaml  corr_matrix_centered.csv  hmm_regime_counts.csv  optuna.csv
script_generated_files/: market_exceptions.py  market_hours.py
src/: main_pipeline.py
src/core_ml/: feature_engineering.py  hyperparameter_search.py  train_test_split.py
src/core_ml/models/: deep_vol_models.py  multi_asset_models.py  wavelets.py
src/data_analysis/: correlation_analysis.py  count_nans.py  market_session_integrity.py  ticker_aggs_integrity.py
src/data_ingestion/market_sessions/: find_active_sessions.py  generate_exceptions.py
src/data_ingestion/ticker_aggs/: merge.py  resample.py  restrict.py
src/deep_learning_models/: cnn_model.py  evaluate_model.py  train_deep_model.py
src/forecast_vol/: __init__.py
src/forecast_vol/attention/: __init__.py  data.py  model.py  objective.py  train.py
src/forecast_vol/market/: __init__.py  build_sessions.py
src/forecast_vol/preprocess/: __init__.py  basic_features.py  build_dataset.py  resample.py  restrict.py
src/forecast_vol/stochastic/: __init__.py  egarch.py  fit_all.py  fractal.py  rfsv.py
src/forecast_vol/synergy/: __init__.py  build_corr.py  gnn_model.py  gnn_snapshots.py  hmm_fit.py  optuna_search.py
src/incremental_pipelines/: basic_prepocessing.py  populate_market_minutes.py
src/multi_asset_synergy/: gnn_synergy.py  run_hierarchical_nn.py
src/preprocessing/data_ingestion/: resample.py
src/preprocessing/feature_engineering/: inject_basic_features.py
src/preprocessing/market_sessions/: find_active_sessions.py  generate_exceptions.py
src/stochastic_models/: inject_stochastic.py  rfsv_model.py
src/subpipelines/: ingest_process.py  populate_market_minutes.py  preprocess_ticker_aggs.py
src/utils/: cache_manager.py  cfg.py  file_io.py  helpers.py  visualization.py
stochastic_models/: fractal_analysis.py  garch_model.py  hyperparam_search.py  run_stochastic_models.py
tests/: test_attention.py  test_market.py  test_preprocess.py  test_stochastic.py  test_synergy.py
tests/data/: test_market_sessions.py
tests/utils/: test_file_io.py  test_helpers.py
